cmake_minimum_required(VERSION 3.19)
project(Conway_Game)

set(CMAKE_CXX_STANDARD 20)
set(SOURCE_FILES main.cpp)
add_executable(${PROJECT_NAME} main.cpp)

set(SFML_ROOT "libs/SFML-2.5.1")
set(SFML_DIR "libs/SFML-2.5.1/lib/cmake/SFML")
set(SFML_STATIC_LIBRARIES TRUE)
find_package(SFML 2.5 REQUIRED COMPONENTS audio graphics window system)
if (SFML_FOUND)
    message("OK")
    include_directories(${SFML_INCLUDE_DIR})
    link_directories(${SFML_LINK_DIR})
    target_link_libraries(Conway_Game sfml-system sfml-graphics sfml-audio)
else ()
    message("SFML NOT FOUND")
endif()